Answered goals report style adjustments and activate i18n

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1196,6 +1196,10 @@ li.item .notify_badge {
     font-weight: 700;
     font-size: 20px;
 }
+
+div.dataTables_wrapper div.dataTables_paginate {
+    text-align: center !important;
+}
 /* End Goals */
 
 
