--- a/goals/templates/goals/_answered.html
+++ b/goals/templates/goals/_answered.html
@@ -8,27 +8,19 @@
 		<table id="answered_table" class="table table-striped table-bordered">
 			<thead>
 				<th>
-					<a href="">
-						{% trans 'Student' %} <i class="fa fa-fw pull-right"></i>
-					</a>
+					{% trans 'Student' %}
 				</th>
 				<th>
 					{% trans 'Group' %}
 				</th>
 				<th>
-					<a href="">
-						{% trans 'Definition Date' %} <i class="fa fa-fw pull-right"></i>
-					</a>
+					{% trans 'Definition Date' %}
 				</th>
 				<th>
-					<a href="">
-						{% trans 'Update Date' %} <i class="fa fa-fw pull-right"></i>
-					</a>
+					{% trans 'Update Date' %}
 				</th>
 				<th>
-					<a href="">
-						{% trans 'Goals' %} <i class="fa fa-fw pull-right"></i>
-					</a>
+					{% trans 'Goals' %}
 				</th>
 			</thead>
 			<tbody>
