--- a/goals/templates/goals/reports.html
+++ b/goals/templates/goals/reports.html
@@ -66,5 +66,31 @@
 			</div>
 		</div>
 
+		<script type="text/javascript">
+			var dataTablei18n = {
+		        "decimal":        "",
+		        "emptyTable":     "{% trans 'No data available in table' %}",
+		        "info":           "{% trans 'Showing _START_ to _END_ of _TOTAL_ entries' %}",
+		        "infoEmpty":      "{% trans 'Showing 0 to 0 of 0 entries' %}",
+		        "infoFiltered":   "{% trans '(filtered from _MAX_ total entries)' %}",
+		        "infoPostFix":    "",
+		        "thousands":      ",",
+		        "lengthMenu":     "{% trans 'Show _MENU_ entries' %}",
+		        "loadingRecords": "{% trans 'Loading...' %}",
+		        "processing":     "{% trans 'Processing...' %}",
+		        "search":         "{% trans 'Search' %}:",
+		        "zeroRecords":    "{% trans 'No matching records found' %}",
+		        "paginate": {
+		            "first":      "{% trans 'First' %}",
+		            "last":       "{% trans 'Last' %}",
+		            "next":       "»",
+		            "previous":   "«"
+		        },
+		        "aria": {
+		            "sortAscending":  "{% trans ': activate to sort column ascending' %}",
+		            "sortDescending": "{% trans ': activate to sort column descending' %}"
+		        }
+		    }
+		</script>
 		<script type="text/javascript" src="{% static 'js/goals_reports.js' %}"></script>
 {% endblock %}
