--- a/goals/templates/goals/reports.html
+++ b/goals/templates/goals/reports.html
@@ -56,22 +56,20 @@
 			        <ul class="core-subjects-options">
 		                <a href="javascript:getAnswered()"><li class="answered_link active">{% trans "Answered" %} ({{ totals.answered }})</li></a>
 		                <a href="javascript:getUnanswered()"><li class="unanswered_link">{% trans "Unanswered" %} ({{ totals.unanswered }})</li></a>
-		                <a href=""><li class="">{% trans "Resource History" %}</li></a>
+		                <a href="javascript:getHistory()"><li class="history_link">{% trans "Resource History" %}</li></a>
 			        </ul>
 			    </div>
 
 		        <div class="answered" data-url="{% url 'goals:answered_report' goal.slug %}">
 			    	<div class="answered_data"></div>
-			    	<div class="text-center">
-			    		<div class="holder"></div>
-			    	</div>
 			    </div>
 
 			    <div class="unanswered" data-url="{% url 'goals:unanswered_report' goal.slug %}">
 			    	<div class="unanswered_data"></div>
-			    	<div class="text-center">
-			    		<div class="holder"></div>
-			    	</div>
+			    </div>
+
+			    <div class="history" data-url="{% url 'goals:history_report' goal.slug %}">
+			    	<div class="history_data"></div>
 			    </div>
 			</div>
 		</div>
@@ -104,7 +102,8 @@
 
 		    var csvBtnLabeli18n = "<i class='fa fa-download'></i> {% trans 'Download .csv file' %}",
 		    	answeredBread = "{% trans 'Reports: Answered' %}",
-		    	unansweredBread = "{% trans 'Reports: Unanswered' %}";
+		    	unansweredBread = "{% trans 'Reports: Unanswered' %}",
+		    	historyBread = "{% trans 'Reports: History' %}";
 		</script>
 		<script type="text/javascript" src="{% static 'js/goals_reports.js' %}"></script>
 {% endblock %}
