--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1209,4 +1209,10 @@ div.dataTables_wrapper div.dataTables_paginate {
     width: 15%;
     text-align: center;
 }
+
+#report-header li {
+    display: inline;
+    margin-right: 10px;
+    font-size: 16px;
+}
 /* End Reports */
