--- a/reports/templates/reports/_form.html
+++ b/reports/templates/reports/_form.html
@@ -11,6 +11,21 @@
 			{% render_field field class='form-control' %}
     {% endif %}
     	
+    {% if field.errors %}
+            <div class="row">
+                </br>
+                <div class="alert alert-danger alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    <ul>
+                        {% for error in field.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        {% endif %}
     {% endfor %}
     <div class="row text-center">
         <input type="submit" value="Search" class="btn btn-success btn-raised" />
