--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1209,10 +1209,22 @@ div.dataTables_wrapper div.dataTables_paginate {
     width: 15%;
     text-align: center;
 }
+#report-header{
+    padding-left: 0px;
+}
 
 #report-header li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 20px;
     font-size: 16px;
+}
+
+#report-info{
+    padding-left: 0px;
+}
+
+#report-info li{
+    display: inline;
+    margin-right: 30px;
 }
 /* End Reports */
