--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1228,3 +1228,45 @@ div.dataTables_wrapper div.dataTables_paginate {
     margin-right: 30px;
 }
 /* End Reports */
+
+/* Chat */
+.participants-group {
+    margin-left: 40px;
+}
+
+.participant {
+    margin-bottom: 10px;
+    border-width: 1px;
+    border-style: solid;
+    padding-right: 10px;
+}
+
+.participant .user-img {
+    padding: 5px 0px;
+}
+
+.participant .user-info {
+    padding: 20px 15px;
+}
+.participant .user-info .status {
+    width: 20px;
+    height: 20px;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 10px;
+    margin-right: 10px;
+    position: relative;
+    top: 3px;
+    display: inline-block;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+.participant .user-info h4 {
+    font-weight: 700;
+    line-height: 2.0;
+}
+
+.participant .buttons {
+    padding: 20px 0px;
+}
+/* End Chat */
