--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -471,6 +471,16 @@ a.add-row {
 .goal_divider {
   border-top-color: #888; }
 
+.participant {
+  border-color: #888; }
+
+.participant .user-info .status {
+  border-color: #888;
+  background-color: #F5F5F5; }
+
+.participant .user-info .status.active {
+  background-color: #009688; }
+
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
     color: #333333 !important; }
