--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -642,6 +642,16 @@ a.add-row
 .goal_divider
     border-top-color: #888
 
+.participant
+    border-color: #888
+
+.participant .user-info .status
+    border-color: #888
+    background-color: $default-white
+
+.participant .user-info .status.active
+    background-color: $primary-color
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
