when create a new form, initial data is correct

--- a/reports/templates/reports/create.html
+++ b/reports/templates/reports/create.html
@@ -62,7 +62,15 @@
                    fields[0].options[fields[0].options.length] = new Option(data.resources[j].name,data.resources[j].id);
 
                 }
-                //Modify tags fields
+                //Set initial tag options
+                $.get("{% url 'subjects:reports:get_tags' %}?resource_id="+fields[0].value, function(data){
+                        fields[1].options.length = 0;
+                        for(var j = 0; j < data.tags.length; j++){ 
+                            fields[1].options[fields[1].options.length] = new Option(data.tags[j].name,data.tags[j].id);
+                        }
+                });
+
+                //Modify tags fields - on resource type value modifies
                 fields[0].onchange = function(item){
                     //it request all tags associated with that resource 
                     $.get("{% url 'subjects:reports:get_tags' %}?resource_id="+item.target.value, function(data){
