--- a/reports/templates/reports/_form.html
+++ b/reports/templates/reports/_form.html
@@ -2,7 +2,21 @@
 
 <form action="" method="post">{% csrf_token %}
     <p>{% trans "General Parameters" %}</p><hr>
+    {% if form.errors %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <ul>
+                {% for key, message in form.errors.items  %}
+                    <li>{{message}}</li>
+                {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
     {% for field  in form %}
+
+
         {% if field.auto_id == 'id_init_date' or field.auto_id == 'id_end_date' %}
         	<label> {{field.label}} </label>
     		{% render_field field class='form-control date-picker' %}
