--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 {% load static i18n django_bootstrap_breadcrumbs %}
+{% get_current_language as LANGUAGE_CODE %}
 
 <html>
 <head>
@@ -27,7 +28,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/alertifyjs/alertify.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/alertifyjs/themes/bootstrap.css' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/jPages.css' %}">  
+    <link rel="stylesheet" type="text/css" href="{% static 'css/jPages.css' %}">
 
 	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
 	<!--<script type="text/javascript" src="{% static 'js/bootstrap-acessibility2.min.js' %}"></script>-->
@@ -46,7 +47,7 @@
 	<!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus_responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
-    	
+
     {% block style %}
 	{% endblock %}
 	{% block javascript %}
@@ -55,14 +56,14 @@
 	<!-- Summernote -->
 	<script src="{% static 'summernote/summernote.js' %}" type="text/javascript"></script>
 	<link href="{% static 'summernote/summernote.css' %}" type="text/css" rel="stylesheet" />
-    
+
     {% with 'css/themes/'|add:theme.css_style|add:'.css' as theme_selected %}
         <link rel="stylesheet" type="text/css" href="{% static theme_selected %}">
     {% endwith %}
 
 
 </head>
-<body>
+<body data-lang="{{ LANGUAGE_CODE }}">
     {% block nav %}
         <div class="navbar navbar-default">
             <div class="navbar-header">
@@ -76,7 +77,7 @@
                     <span class="pull-right project_name">{{ theme.title }}</span>
                 </a>
 
-                
+
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <div class="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 col-lg-7 col-lg-offset-1 text-center">
@@ -93,29 +94,29 @@
                         </div>
                     </form>
                 </div>
-               
+
                 <ul class="nav navbar-nav navbar-right notifications">
 
-                      <li class="dropdown language-selector-on-header {{ settings_menu_active }}" title data-original-title="{% trans 'Language Selector' %}"> 
-                       {% get_current_language as LANGUAGE_CODE %}
+                      <li class="dropdown language-selector-on-header {{ settings_menu_active }}" title data-original-title="{% trans 'Language Selector' %}">
+
 
                         <a href="#" class="dropdown-toggle title" data-toggle="dropdown" data-close-others="true">
                             <i class="fa fa-cog hidden-xs" aria-hidden="true"></i>
                             <span class="visible-xs-inline">{% trans 'Language Selector' %}</span>
-                            {% with 'img/'|add:LANGUAGE_CODE|add:'.png' as image_static %}                            
+                            {% with 'img/'|add:LANGUAGE_CODE|add:'.png' as image_static %}
                             <img src="{% static image_static %}" />
-                            {% endwith %}                         
+                            {% endwith %}
                         </a>
                         <a href="#" class="dropdown-toggle no-title" data-toggle="dropdown" data-close-others="true">
 
                             {% with 'img/'|add:LANGUAGE_CODE|add:'.png' as image_static %}
                                 <img src="{% static image_static %}" />
                             {% endwith %}
-                           
+
                         </a>
                         <ul class="dropdown-menu">
 
-                            
+
                             {% get_available_languages as LANGUAGES %}
                             {% get_language_info_list for LANGUAGES as languages %}
                             {% for language in languages %}
@@ -130,11 +131,11 @@
                                         <span>{{language.code}}</span>
                                     </a>
                                 </li>
-                               
+
                             {% endfor %}
                         </ul>
                     </li>
-                   
+
 
                     <li id="profile-menu" class="dropdown" data-toggle="tooltip" data-placement="bottom" title data-original-title="{{ user }}">
                         <a href="" data-toggle="dropdown" class="dropdown-toggle profile">
@@ -155,7 +156,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-cog hidden-xs" aria-hidden="true"></i>
                                 <span class="visible-xs-inline">{% trans 'Settings' %}</span>
-                            </a> 
+                            </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
                                 <li><a href="{% url 'categories:index' %}">{% trans 'Manage Categories' %}</a></li>
@@ -269,7 +270,7 @@
                             </a>
                         </li>
                         <li class="item" data-toggle="tooltip" data-placement="top" title="{% trans "Analytics" %}">
-                            <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                            <i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i>
                         </li>
                     </ul>
                 </div>
@@ -288,9 +289,9 @@
 
      <script>
           $(".language-item").click(function(event) {
-            
+
             change_language.post("{% url 'set_language' %}", {'language': $(this)[0].attributes[1].value, next: "{% url 'users:login' %}", csrfmiddlewaretoken: '{{ csrf_token }}' } );
-           
+
           });
         </script>
 </body>
