--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -474,12 +474,15 @@ a.add-row {
 .participant {
   border-color: #888; }
 
+.participant .user-info h4 {
+  color: #59b75c; }
+
 .participant .user-info .status {
   border-color: #888;
   background-color: #F5F5F5; }
 
 .participant .user-info .status.active {
-  background-color: #009688; }
+  background-color: #59b75c; }
 
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
