--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -645,12 +645,15 @@ a.add-row
 .participant
     border-color: #888
 
+.participant .user-info h4
+    color: #59b75c
+
 .participant .user-info .status
     border-color: #888
     background-color: $default-white
 
 .participant .user-info .status.active
-    background-color: $primary-color
+    background-color: #59b75c
 
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
