--- a/topics/templates/topics/list.html
+++ b/topics/templates/topics/list.html
@@ -6,7 +6,7 @@
 <div class="panel-group subject-group" id="topics-accordion" role="tablist" aria-multiselectable="true">
 	<input type="hidden" class="url_order" value="{% url 'topics:update_order' %}" />
 	<input type="hidden" class="subs_url" value="{% url 'subjects:view' subject.slug %}" />
-	
+
 	{% for topic in subject.topic_subject.all %}
 		{% if not topic.repository and topic.visible or has_subject_permissions %}
 			<div class="panel panel-info {% if not topic.visible or topic.repository %} topic-panel-invisible {% else %} topic-panel {% endif %}">
@@ -21,7 +21,7 @@
 
 	                        {% if has_subject_permissions %}
 		                    	<div class="col-md-5 pull-right category-card-items">
-		                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 
+		                            <a href="" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 		                            </a>
 		                            <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
@@ -40,7 +40,7 @@
 
 			    	<input type="hidden" class="log_url" value="{% url 'topics:view_log' topic.id %}" />
             		<input type="hidden" class="log_id" value="" />
-			    	
+
 	    			{% autoescape off %}
 						{{ topic.description }}
 					{% endautoescape %}
@@ -60,7 +60,8 @@
 							    	<li><a href="{% url 'goals:create' topic.slug %}"><i class="fa fa-line-chart"></i> {% trans 'Topic Goals' %}</a></li>
 							    	<li><a href="{% url 'webpages:create' topic.slug %}"><i class="fa fa-file-code-o"></i> {% trans 'Webpage' %}</a></li>
 							    	<li><a href="#"><i class="fa fa-question-circle-o"></i> {% trans 'Questionary' %}</a></li>
-							  		
+										<li><a href="{% url 'webconferences:create' topic.slug %}"><i class="fa fa-desktop"></i> {% trans 'Web Conference' %}</a></li>
+
 							  	</ul>
 							</div>
 						</div>
