Adjusting messages participants status and adding 'away' status for possible logged but inactive users

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -655,6 +655,9 @@ a.add-row
 .participant .user-info .status.active
     background-color: #59b75c
 
+.participant .user-info .status.away
+    background-color: #DAA520
+
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
         color: #333333 !important
