--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1243,6 +1243,37 @@ div.dataTables_wrapper div.dataTables_paginate {
     text-transform: uppercase;
     letter-spacing: 0;
 }
+
+    h5 {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+
+  h5.one {
+    margin-top: 0;
+    color: #bdbdbd;
+  }
+  
+  h5.one:before {
+    content: "";
+    display: block;
+    border-top: solid 1px #bdbdbd;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+  }
+  
+  h5.one span {
+    background: #eee;
+    padding-right: 20px;
+    position: relative;
+    z-index: 5;
+  }
+
 /* End Reports */
 
 /* Chat */
