--- a/chat/templates/chat/list_participants.html
+++ b/chat/templates/chat/list_participants.html
@@ -69,5 +69,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="post-modal-form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"></div>
+    <div class="modal fade" id="chat-modal-info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"></div>
+
+    <script type="text/javascript" src="{% static 'js/chat.js' %}"></script>
   {% endblock %}
