--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -474,17 +474,17 @@ a.add-row {
 .participant {
   border-color: #888; }
 
-.participant .user-info h4 {
+.participant .user-info h4, .modal_profile_sidebar h4 {
   color: #59b75c; }
 
-.participant .user-info .status {
+.participant .user-info .status, .modal_profile_sidebar .status {
   border-color: #888;
   background-color: #F5F5F5; }
 
-.participant .user-info .status.active {
+.participant .user-info .status.active, .modal_profile_sidebar .status.active {
   background-color: #59b75c; }
 
-.participant .user-info .status.away {
+.participant .user-info .status.away, .modal_profile_sidebar .status.away {
   background-color: #DAA520; }
 
 @media(max-width: 768px) {
