--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -607,20 +607,20 @@ a.add-row
     color: #BBBBBB !important
 
 
-.post-filter 
+.post-filter, .talk-filter 
     background: $default-white
 
 
-.post-filter h4 
+.post-filter h4, .talk-filter h4
     color: #26A69A
 
 
-.post-filter 
+.post-filter, .talk-filter 
     label 
         color: #333333
 
 
-.post-filter 
+.post-filter, .talk-filter 
     i 
         color: #FF0000
 
@@ -658,6 +658,20 @@ a.add-row
 
 .participant .user-info .status.away, .modal_profile_sidebar .status.away
     background-color: #DAA520
+
+.messages-container
+    border-top-color: #cacaca
+    background-color: #f5f5f5
+
+.message-sender
+    border-top-color: #000000 !important
+
+.message-sender-container
+    background-color: #e5e5e5
+
+.message-sender-container .message-field div
+    background-color: $white
+    border-color: #888888
 
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
